--- a/nextflow.config
+++ b/nextflow.config
@@ -32,7 +32,7 @@ process {
     executor = 'slurm'
     // use samtools container for regular file
     container = '/projects/fs1/shared/ctg-containers/ctg-demux-runfolder/singularity-bcl2fastq-2.20.0.422-1.3.sif'
-    time = '48'
+    time = '48h'
     cpus = '16'
 
     withName:bcl2fastq {
