major updates. include fastqc and fastqscreen

--- a/nextflow.config
+++ b/nextflow.config
@@ -23,9 +23,13 @@ params {
 
     // run modules section
     // Mostly used for debugging and filed runs
-    run_bcl2fastq  =  true // if to move fastqq files from input folder to (delivery) nextflow folder
-    run_multiqc    =  true
-    run_finalize_pipeline    =  true
+    
+    run_bcl2fastq           =  true 
+    run_check_fastq         =  true // if to move fastqq files from input folder to (delivery) nextflow folder
+    run_fastqc              =  true
+    run_fastqscreen         =  true
+    run_multiqc             =  true
+    run_finalize_pipeline   =  true
 }
 
 process {
@@ -38,6 +42,12 @@ process {
     withName:bcl2fastq {
       container = '/projects/fs1/shared/ctg-containers/ctg-demux-runfolder/singularity-bcl2fastq-2.20.0.422-1.3.sif'
       }
+    withName:fastqc {
+      container = '/projects/fs1/shared/ctg-containers/ctg-rnaseq/singularity-fastqc-0.11.0.sif'
+      }
+    withName:fastqscreen {
+      container = '/projects/fs1/shared/ctg-containers/ctg-rnaseq/singularity-fastq_screen-0.14.0.sif'
+      }  
     withName:multiqc {
       container = '/projects/fs1/shared/ctg-containers/ctg-demux-runfolder/singularity-multiqc-1.11.sif'
       }
