added one extra multiqc for demux pipe

--- a/nextflow.config
+++ b/nextflow.config
@@ -25,6 +25,7 @@ params {
     // Mostly used for debugging and filed runs
     
     run_bcl2fastq           =  true 
+    run_multiqc_demux       =  true
     run_check_fastq         =  true // if to move fastqq files from input folder to (delivery) nextflow folder
     run_fastqc              =  true
     run_fastqscreen         =  true
